envoy/envoy.yaml
static_resources:
  listeners:
    - name: listener_0
      address:
        socket_address: 
          address: 0.0.0.0
          port_value: 8080
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match: { prefix: "/service-a" }
                          route: 
                            cluster: cluster_service_a
                            prefix_rewrite: "/"
                        - match: { prefix: "/service-b" }
                          route: 
                            cluster: cluster_service_b
                            prefix_rewrite: "/"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: cluster_service_a
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: cluster_service_a
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: 
                      address: service-a
                      port_value: 3000

    - name: cluster_service_b
      type: LOGICAL_DNS
      load_assignment:
        cluster_name: cluster_service_b
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address: 
                      address: service-b
                      port_value: 3000

admin:
  address:
    socket_address: 
      address: 0.0.0.0
      port_value: 9901
